--- a/pages/templates/pages/wiki_page_details.html
+++ b/pages/templates/pages/wiki_page_details.html
@@ -1,2 +1,12 @@
-<h1>{{ page_title }}</h1>
-<div id="content">{{ page_content }}</div>
+<html>
+
+<head>
+    <title>Wiki: {{ page_title }}</title>
+</head>
+
+<body>
+    <h1>{{ page_title }}</h1>
+    <div id="content">{{ page_content }}</div>
+</body>
+
+</html>
