Finished createNewPage function and added basic response handler function

--- a/pages/templates/pages/wiki_page_new.html
+++ b/pages/templates/pages/wiki_page_new.html
@@ -16,7 +16,7 @@
         <input type='text' name='title' />
         <label>Page Content</label>
         <textarea name='page_content'></textarea>
-        <button type="button" onClick="createNewPage(this.form);">Create</button>
+        <button type="button" onClick="createNewPage(formToJson(this.form), new XMLHttpRequest(), window, document);">Create</button>
     </form>
 </div>
 </body>
