--- a/pages/templates/pages/wiki_page_details.html
+++ b/pages/templates/pages/wiki_page_details.html
@@ -9,6 +9,9 @@
 <body>
     <h1>{{ page_title }}</h1>
     <div id="content">{{ page_content }}</div>
+    <div id="controls">
+        <a href="edit/">Edit Page</a>
+    </div>
 </body>
 
 </html>
