--- a/pages/templates/pages/wiki_page_new.html
+++ b/pages/templates/pages/wiki_page_new.html
@@ -5,7 +5,8 @@
 <head>
 <title>Wiki: New Page</title>
 {% load staticfiles %}
-<script src="{% static "pages/js/src/NewPageSubmission.js" %}"></script>
+<script src='{% static "pages/js/src/FormUtilities.js" %}'></script>
+<script src='{% static "pages/js/src/NewPageSubmission.js" %}'></script>
 </head>
 
 <body>
